Fixed Relogin in horizon doesn't work
Added missing LOGOUT_URL to local_settings.py template

Change-Id: I1378dab60247246fed24873b0d04430429d3d079
Partial-Bug: #1284241

--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -355,6 +355,7 @@ LOGGING = {
 }
 LOGIN_URL='<%=  scope.lookupvar("horizon::params::root_url") %>/auth/login/'
 LOGIN_REDIRECT_URL='<%=  scope.lookupvar("horizon::params::root_url") %>'
+LOGOUT_URL='<%= scope.lookupvar("horizon::params::root_url") %>/auth/logout/'
 
 # The Ubuntu package includes pre-compressed JS and compiled CSS to allow
 # offline compression by default.
