--- a/deployment/puppet/mcollective/templates/server.cfg.erb
+++ b/deployment/puppet/mcollective/templates/server.cfg.erb
@@ -9,9 +9,9 @@ identity = master
 
 # Set huge value of ttl to avoid cases with unsyncronized time between nodes
 # bash$ date -d '2033-5-18 3:33:20 UTC' +%s
-# 2000000000
-# It means that ttl equals 63 years and a half.
-ttl = 2000000000
+# 5400
+# It means that ttl equals 1 hours and a half.
+ttl = 5400
 
 # Plugins
 securityprovider = psk
