--- a/deployment/puppet/mcollective/templates/client.cfg.ubuntu.erb
+++ b/deployment/puppet/mcollective/templates/client.cfg.ubuntu.erb
@@ -9,7 +9,9 @@ direct_addressing = 1
 securityprovider = psk
 plugin.psk = <%= @pskey %>
 
-ttl = 2000000000
+# 5400
+# It means that ttl equals 1 hours and a half.
+ttl = 5400
 
 <% if @stomp -%>
 connector = stomp
