Add capability for installing astute from pkg
* Added rabbitmq_host to nailgun::astute
class.
* Added rbenv versionto nailgun::astute
for dev environments
* Updated astute daemon launcher for
non-rbenv'd start
* FIXME added for naily package
* FIXME added for astute conf and log refs

blueprint fuel-containerization-of-services

Change-Id: I7eb83da970d7c8d4268641112f560820e77bd6c6

--- a/deployment/puppet/nailgun/templates/astuted.erb
+++ b/deployment/puppet/nailgun/templates/astuted.erb
@@ -1,3 +1,7 @@
 #!/bin/bash
-RBENV_ROOT=/opt/rbenv RBENV_VERSION=1.9.3-p484 exec /opt/rbenv/bin/rbenv exec \
+<% if @rbenv_version -%>
+RBENV_ROOT=/opt/rbenv RBENV_VERSION=<%= @rbenv_version %> exec /opt/rbenv/bin/rbenv exec \
   ruby -r 'rubygems' -e "gem 'astute', '>= 0'; load Gem.bin_path('astute', 'astuted', '>= 0')" -- $@
+<% else -%>
+ruby -r 'rubygems' -e "gem 'astute', '>= 0'; load Gem.bin_path('astute', 'astuted', '>= 0')" -- $@
+<% end -%>
