Setup default session backend
backport from 5.0

Closes-bug: #1303932
Change-Id: Iff6935caf1466acd08c9885042d5778357d745cd

--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -106,6 +106,8 @@ LOCAL_PATH = '/tmp'
 #SECRET_KEY = secret_key.generate_or_read_from_file(os.path.join(LOCAL_PATH, '.secret_key_store'))
 SECRET_KEY = '<%= secret_key %>'
 
+SESSION_ENGINE = 'django.contrib.sessions.backends.cache'
+
 CACHES = {
     'default': {
         'BACKEND' : 'django.core.cache.backends.memcached.MemcachedCache',
