Add pid field to debug logger output
Change-Id: Ie0c8d862ceaf256fb78decb3a63148a6c8ba9e18

--- a/deployment/puppet/horizon/templates/local_settings.py.erb
+++ b/deployment/puppet/horizon/templates/local_settings.py.erb
@@ -269,7 +269,7 @@ LOGGING = {
         'disable_existing_loggers': False,
         'formatters': {
             'debug': {
-                'format': 'dashboard-%(name)s: %(levelname)s %(module)s %(funcName)s %(message)s'
+                'format': 'dashboard-%(name)s: %(levelname)s [pid=%(process)d] %(module)s %(funcName)s %(message)s'
             },
             'normal': {
                 'format': 'dashboard-%(name)s: %(levelname)s %(message)s'
