Use utf8 charset for IceHouse modules for pupet
Sync mysql_module (default v 0.9), charset and collate
(mysql v2.2+ only) usage from upstream.

Closes-bug: #1302389

Change-Id: I5e079e25977a86dcbc7ce670bca281ac3ec4ba41
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/deployment/puppet/galera/templates/wsrep.cnf.erb
+++ b/deployment/puppet/galera/templates/wsrep.cnf.erb
@@ -122,7 +122,7 @@ wsrep_sst_receive_address=<%= @node_address %>:3307
 
 # SST authentication string. This will be used to send SST to joining nodes.
 # Depends on SST method. For mysqldump method it is root:<root password>
-wsrep_sst_auth=<%= @mysql_user %>:<%= @mysql_password %> 
+wsrep_sst_auth=<%= @mysql_user %>:<%= @mysql_password %>
 
 # Desired SST donor name.
 #wsrep_sst_donor=
@@ -154,3 +154,6 @@ myisam_sort_buffer_size=<%= @myisam_sort_buffer_size %>
 wait_timeout=<%= @wait_timeout %>
 open_files_limit=<%= @open_files_limit %>
 innodb_flush_log_at_trx_commit=<%= @innodb_flush_log_at_trx_commit %>
+collation-server = utf8_general_ci
+init-connect='SET NAMES utf8'
+character-set-server = utf8
