Add support for ceilometer agent notification service
Partial implements blueprint ceilometer-fuel-integraition

Change-Id: I4100e72a77f3f1f37836cce64f4e63fa439635be

--- a/deployment/puppet/swift/templates/proxy-server.conf.erb
+++ b/deployment/puppet/swift/templates/proxy-server.conf.erb
@@ -23,3 +23,7 @@ use = egg:swift#proxy
 allow_account_management = <%= @allow_account_management %>
 account_autocreate = <%= @account_autocreate %>
 
+<% if @enable_ceilometer then -%>
+[filter:ceilometer]
+use = <%= @filter %>
+<% end -%>
