Make ha-policy setting rabbit-tolerant
set ha policy for queues only for 3.x
version of rabbit.

Change-Id: I07be5c46569b15bc6faccf059719325b1db9f044
Related-Bug: #1278336
Related-Bug: #1276770

--- a/deployment/puppet/rabbitmq/templates/rabbitmq-server_ubuntu.erb
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq-server_ubuntu.erb
@@ -161,7 +161,8 @@ start_rabbitmq () {
             fi
             MAX_START_ATTEMPTS=$((MAX_START_ATTEMPTS - 1))
         done
-        rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
+####FIXME(aglarendil): remove the subshell call after 3.x rabbit migration is complete
+        (rabbitmqctl status | grep 'running_applications' | grep -q '3.2') && rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
     else
         RETVAL=3
     fi
