--- a/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
@@ -173,7 +173,13 @@ RabbitMQ Server before consider start failed."
             esac
             MAX_START_ATTEMPTS=$((MAX_START_ATTEMPTS - 1))
         done
-        rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
+####FIXME(aglarendil): remove this if clause after 3.x rabbit migration is complete
+        rabbitmqctl status | grep -e 'running_applications' -e 'RabbitMQ' | grep -q '3.2'
+        rc=$?
+        if [ $rc -eq 0 ]; then
+           echo "Setting HA queue policies"
+           rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
+        fi
     fi
 }
 
