--- a/deployment/puppet/rabbitmq/templates/rabbitmq-server_ubuntu.erb
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq-server_ubuntu.erb
@@ -161,7 +161,13 @@ start_rabbitmq () {
             fi
             MAX_START_ATTEMPTS=$((MAX_START_ATTEMPTS - 1))
         done
-        rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
+####FIXME(aglarendil): remove this if clause after 3.x rabbit migration is complete
+        rabbitmqctl status | grep -e 'running_applications' -e 'RabbitMQ' | grep -q '3.2'
+        rc=$?
+        if [ $rc -eq 0 ]; then
+           echo "Setting HA queue policies"
+           rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
+        fi
     else
         RETVAL=3
     fi
