--- a/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
@@ -173,7 +173,7 @@ RabbitMQ Server before consider start failed."
             esac
             MAX_START_ATTEMPTS=$((MAX_START_ATTEMPTS - 1))
         done
-        rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
+        (rabbitmqctl status | grep 'running_applications' | grep -q '3.2') && rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
     fi
 }
 
