Add server override feature for cobbler
Needed for cobbler, which requires a local
IP in server field for its own operations,
but connecting clients need IP of master host.

blueprint fuel-containerization-of-services

Change-Id: I6ba03ca7f74ebc2b1175aa07369d580b29472693

--- a/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
+++ b/deployment/puppet/cobbler/templates/kickstart/centos.ks.erb
@@ -220,7 +220,7 @@ gem install rethtool   --version 0.0.3  --source <%= @gem_source %> --no-ri --no
 mkdir -p /etc/nailgun-agent/
 cat > /etc/nailgun-agent/config.yaml << EOA
 ---
-url: '<%= scope.lookupvar('nailgun::nailgun_api_url') %>'
+url: '<%= scope.lookupvar('nailgun::cobbler::nailgun_api_url') %>'
 EOA
 
 # COBBLER EMBEDDED SNIPPET: 'kernel_lt_if_enabled'
