Add standalone nailgun role
Contains modifications to specify rabbitmq and
cobbler servers to allow nailgun to communicate
these servers located on different host IPs.

blueprint fuel-containerization-of-services

Change-Id: I0c43bfb74f306830d8df9fc1f66096309faed369

--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -1,4 +1,4 @@
-LISTEN_ADDRESS: "127.0.0.1"
+LISTEN_ADDRESS: "0.0.0.0"
 LISTEN_PORT: "8001"
 DEVELOPMENT: false
 
@@ -37,7 +37,7 @@ VLANS_RANGE_END: "1000"
 
 RABBITMQ:
   fake: "0"
-  hostname: "127.0.0.1"
+  hostname: "<%= @rabbitmq_host %>"
   port: 5672
   userid: "<%= @rabbitmq_astute_user %>"
   password: "<%= @rabbitmq_astute_password %>"
