--- a/deployment/puppet/cobbler/templates/snippets/ubuntu_network_console_and_syslog.erb
+++ b/deployment/puppet/cobbler/templates/snippets/ubuntu_network_console_and_syslog.erb
@@ -10,6 +10,7 @@ d-i network-console/start select continue
 
 d-i preseed/early_command string /bin/mkdir /.ssh ; \
 /bin/echo "$authorized_keys" > /.ssh/authorized_keys ; \
+anna-install network-console ; \
 /bin/sed -e "s#PasswordAuthentication yes#PasswordAuthentication no#" -i /etc/ssh/sshd_config ; \
 /usr/bin/killall -s HUP sshd ; \
 /usr/bin/killall -s KILL syslogd ; \
