correct production check for venv paths
Sets venv path to /usr for docker
production environments. Fixes
deployment of OSTF.

blueprint fuel-containerization-of-services

Change-Id: Iae7b621fc73221533bad867d2dc523bdb1ea304d

--- a/deployment/puppet/nailgun/templates/supervisor/ostf.conf.erb
+++ b/deployment/puppet/nailgun/templates/supervisor/ostf.conf.erb
@@ -1,5 +1,5 @@
 [program:ostf]
-command=<%= @ostf_env %>/bin/ostf-server --host=<%= @host %> --port=8777 --log_file=<%= @logfile %> --dbpath <%= @dbengine %>://<%= @dbuser %>:<%= @dbpass %>@<%= @dbhost %>:<%= @dbport %>/<%= @dbname %>
+command=<%= @venv %>/bin/ostf-server --host=<%= @host %> --port=8777 --log_file=<%= @logfile %> --dbpath <%= @dbengine %>://<%= @dbuser %>:<%= @dbpass %>@<%= @dbhost %>:<%= @dbport %>/<%= @dbname %>
 process_name=%(program_name)s
 numprocs=1
 numprocs_start=0
