Update OSTF to use ostf.conf instead of params
OSTF deployment with a conf file will allow
simplier calling of OSTF service from supervisord.

blueprint fuel-containerization-of-services

Change-Id: I5c81335fa0d59e9bdfc5faf38990281aad8e73eb

--- a/deployment/puppet/nailgun/templates/supervisor/ostf.conf.erb
+++ b/deployment/puppet/nailgun/templates/supervisor/ostf.conf.erb
@@ -1,5 +1,5 @@
 [program:ostf]
-command=<%= @ostf_env %>/bin/ostf-server --host=<%= @host %> --port=8777 --log_file=<%= @logfile %> --dbpath <%= @dbengine %>://<%= @dbuser %>:<%= @dbpass %>@<%= @dbhost %>:<%= @dbport %>/<%= @dbname %>
+command=/usr/bin/ostf-server
 process_name=%(program_name)s
 numprocs=1
 numprocs_start=0
