add some minor fixes to the L23 module.
Change-Id: Ic8fd53e3040577e0ea466767690ce72a39fb45fa

--- a/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
+++ b/deployment/puppet/l23network/templates/ipconfig_Debian_bondslave.erb
@@ -1,5 +1,5 @@
-auto <%= interface %>
-iface <%= interface %> inet manual
+auto <%= @interface %>
+iface <%= @interface %> inet manual
 bond-master <%= @bond_master %>
 <% if @macaddr -%>
 hwaddress ether <%= @macaddr.downcase %>
