--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -67,5 +67,5 @@ PUPPET_MASTER_HOST: "<%= @puppet_master_hostname %>"
 PUPPET_VERSION: "2.7.19"
 
 DNS_DOMAIN: "<%= @domain %>"
-DNS_SERVERS: "<%= @cobbler_url %>"
+DNS_SERVERS: "<%= @cobbler_host %>"
 DNS_SEARCH: "<%= @domain %>"
