Setup RabbitMQ before mcollective installation.
* install RabbitMQ and create mcollective exchanges;
* restart mcollective service if config is changed;

Thanks Dmitry Iliyn for helps.

Change-Id: I7b9006510d7fa747b3edf37ad724063cef122f3f
Closes-Bug: #1311530

--- a/deployment/puppet/mcollective/templates/server.cfg.erb
+++ b/deployment/puppet/mcollective/templates/server.cfg.erb
@@ -31,6 +31,7 @@ plugin.rabbitmq.pool.1.host = <%= @host %>
 plugin.rabbitmq.pool.1.port = <%= @stompport %>
 plugin.rabbitmq.pool.1.user = <%= @user %>
 plugin.rabbitmq.pool.1.password = <%= @password %>
+plugin.rabbitmq.heartbeat_interval = 30
 <% end -%>
 
 # Facts
