Deploy fuel-dockerctl tools via puppet
Docketctl is needed for docker containers deployment and
management.

Also updated nailgun/examples/host-only.pp manifest to make it
deploy supervisord in the way we need it for proper work of
docker containers.

Related to: https://review.openstack.org/#/c/88280/

blueprint fuel-containerization-of-services

Change-Id: Ib929c1263a887efef766552588ba3716daa7d790

--- a/deployment/puppet/nailgun/templates/supervisord.conf.base.erb
+++ b/deployment/puppet/nailgun/templates/supervisord.conf.base.erb
@@ -15,4 +15,4 @@ childlogdir=/var/log/supervisor
 serverurl=unix:///var/run/supervisor.sock
 
 [include]
-files = /etc/supervisord.d/*.conf
+files = /etc/supervisord.d/current/*.conf
