kill all astute processes on stop
change stopsignal and ask supervisord
to killall all astute processes on stop

Change-Id: I9968c0b68c05d63afdaae135fd85fcca6fdb648d
Closes-Bug: #1310946

--- a/deployment/puppet/nailgun/templates/supervisord.conf.astute.erb
+++ b/deployment/puppet/nailgun/templates/supervisord.conf.astute.erb
@@ -24,7 +24,8 @@ autorestart=true
 startsecs=10
 startretries=1000000
 exitcodes=0,2
-stopsignal=INT
+stopsignal=KILL
+killasgroup=true
 stopwaitsecs=60
 redirect_stderr=true
 stdout_logfile=/var/log/astute/app.log
