--- a/deployment/puppet/nailgun/templates/settings.yaml.erb
+++ b/deployment/puppet/nailgun/templates/settings.yaml.erb
@@ -28,6 +28,7 @@ NET_EXCLUDE:
 ADMIN_NETWORK:
   cidr: "<%= @admin_network %>/<%= @admin_network_cidr %>"
   netmask: "<%= @admin_network_netmask %>"
+  mac: "<%= @admin_network_mac %>"
   size: "<%= @admin_network_size %>"
   first: "<%= @admin_network_first %>"
   last: "<%= @admin_network_last %>"
