Set kernel params in grub config using web UI
* remove hardcoded grub settings
  and set params sended by Nailgun.
* remove code which set parameters
  in /etc/grub.cfg file, this file
  doesn't exist in ubuntu or centos.

Tested on the iso, patches were applied manually.

Depends on: https://review.openstack.org/#/c/90075

Change-Id: I0ad883c087dc39cd4032d739c70466d7aa0098d1
Related-Bug: #1295131

--- a/deployment/puppet/cobbler/templates/snippets/pre_install_partition_lvm.erb
+++ b/deployment/puppet/cobbler/templates/snippets/pre_install_partition_lvm.erb
@@ -1,4 +1,4 @@
 #import pmanager
-#set $pm = $pmanager.PManager($getVar("ks_spaces","[]"))
+#set $pm = $pmanager.PManager($getVar("pm_data",{}))
 #silent $pm.eval()
 $pm.expose()
