Set grub params using web UI
Remove hardcoded grub settings and set params sended by Nailgun

Change-Id: I0ad883c087dc39cd4032d739c70466d7aa0098d1
Related-Bug: #1295131

--- a/deployment/puppet/cobbler/templates/snippets/ubuntu_partition.erb
+++ b/deployment/puppet/cobbler/templates/snippets/ubuntu_partition.erb
@@ -1,5 +1,5 @@
 #import pmanager
-#set $pm = $pmanager.PreseedPManager($getVar("ks_spaces","[]"))
+#set $pm = $pmanager.PreseedPManager($getVar("ks_spaces","[]"), $getVar("bootloader_params",""))
 #silent $pm.eval()
 
 d-i partman/early_command string \
