Add ssh keys host-volume for ostf container
OSTF container needs ssh-keys to be able to login into controller
node via ssh.

Change-Id: I18476ab022d0c9da04937eb39ef9e9116d7618ac

--- a/deployment/puppet/docker/templates/dockerctl_config.erb
+++ b/deployment/puppet/docker/templates/dockerctl_config.erb
@@ -105,7 +105,7 @@ NAILGUN_VOL="--volumes-from ${CONTAINER_NAMES['nailgun']}"
 #App container volume mounts
 ###requirements cheat sheet
 ###ALL: astuteyaml $REPO_CNT $LOG_VOL
-###sshkey: nailgun cobbler astute mcollective
+###sshkey: nailgun cobbler astute mcollective ostf
 ###dump: nginx mcollective
 ###remotelogs: rsyslog nailgun nginx
 ###nailgun: nginx mcollective
@@ -117,7 +117,7 @@ REQS["$REPO_VOL"]="cobbler postgres rabbitmq rsync astute nailgun ostf nginx rsy
 REQS["$PUPPET_VOL"]="rsync"
 #REQS["$PUPPET_VOL"]="cobbler postgres rabbitmq rsync astute nailgun ostf nginx rsyslog mcollective"
 REQS["$LOG_VOL"]="cobbler postgres rabbitmq rsync astute nailgun ostf nginx rsyslog mcollective"
-REQS["${HOST_VOL['sshkey']}"]="nailgun cobbler astute mcollective"
+REQS["${HOST_VOL['sshkey']}"]="nailgun cobbler astute mcollective ostf"
 REQS["${HOST_VOL['dump']}"]="nginx mcollective"
 #REQS["${HOST_VOL['remotelogs']}"]="rsyslog nailgun nginx"
 REQS["$NAILGUN_VOL"]="nginx mcollective"
