--- a/deployment/puppet/docker/templates/dockerctl_config.erb
+++ b/deployment/puppet/docker/templates/dockerctl_config.erb
@@ -101,6 +101,8 @@ LOG_VOL="-v /var/log/docker-logs:/var/log"
 
 #Nailgun static files are in nailgun container
 NAILGUN_VOL="--volumes-from ${CONTAINER_NAMES['nailgun']}"
+COBBLER_VOL="--volumes-from ${CONTAINER_NAMES['cobbler']}"
+ASTUTE_VOL="--volumes-from ${CONTAINER_NAMES['astute']}"
 
 #App container volume mounts
 ###requirements cheat sheet
@@ -109,7 +111,9 @@ NAILGUN_VOL="--volumes-from ${CONTAINER_NAMES['nailgun']}"
 ###dump: nginx mcollective
 ###remotelogs: rsyslog nailgun nginx
 ###nailgun: nginx mcollective
-
+###cobbler: mcollective
+###astute: mcollective
+#
 declare -A REQS
 REQS["${HOST_VOL['astuteyaml']}"]="cobbler postgres rabbitmq rsync astute nailgun ostf nginx rsyslog mcollective"
 REQS["$REPO_VOL"]="cobbler postgres rabbitmq rsync astute nailgun ostf nginx rsyslog mcollective"
@@ -121,6 +125,8 @@ REQS["${HOST_VOL['sshkey']}"]="nailgun cobbler astute mcollective ostf"
 REQS["${HOST_VOL['dump']}"]="nginx mcollective"
 #REQS["${HOST_VOL['remotelogs']}"]="rsyslog nailgun nginx"
 REQS["$NAILGUN_VOL"]="nginx mcollective"
+REQS["$COBBLER_VOL"]="mcollective"
+REQS["$ASTUTE_VOL"]="mcollective"
 
 #assemble requirements 
 for requirement in "${!REQS[@]}"; do
