Add missing RabbitMQ ha-all policy
ha-all policy for RabbitMQ 3 was lost 8002e7e so we need to add it back

Change-Id: I02a0eded3c0a607881d12653464980f42aba1d68
closes-bug: #1315211

--- a/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq-server_redhat.erb
@@ -96,6 +96,7 @@ start_rabbitmq () {
             RETVAL="1"
             ;;
     esac
+    rabbitmqctl set_policy ha-all "." '{"ha-mode":"all", "ha-sync-mode":"automatic"}'
 }
 
 stop_rabbitmq () {
