Start nailgun as the last one
Change-Id: I60b49b24c602aa3843ae1017fd86d0ecbbd42524
Related-Bug: #1315940

--- a/deployment/puppet/docker/templates/dockerctl.erb
+++ b/deployment/puppet/docker/templates/dockerctl.erb
@@ -33,7 +33,7 @@ if [ "$1" == "build" ]; then
     allow_all_docker_traffic
 
     #Step 3: Launch all in order
-    apps="postgres rabbitmq rsync astute rsyslog nailgun mcollective ostf nginx cobbler"
+    apps="postgres rabbitmq rsync astute rsyslog mcollective ostf nginx cobbler nailgun"
     for service in $apps; do
       start_container $service
       sleep 4
