--- a/deployment/puppet/docker/templates/functions.sh.erb
+++ b/deployment/puppet/docker/templates/functions.sh.erb
@@ -29,6 +29,50 @@ function build_storage_containers {
   build_image $SOURCE_DIR/storage-puppet storage/puppet
   build_image $SOURCE_DIR/storage-log storage/log
 }
+function check_ready {
+  #Uses a custom command to ensure a container is ready
+  tries=0
+  failure=0
+  case $1 in
+  nailgun)	until [ $(curl --connect-timeout 1 -s -w %{http_code} http://127.0.0.1:8000/api/version -o /dev/null) = "200" ]; do
+		  ((tries++))
+		  if [ $tries -gt 240 ];then
+		    failure=1
+		    break
+		  fi
+		  sleep 1
+		done
+                ;;
+  ostf)         until [ $(curl --connect-timeout 1 -s -w '%{http_code}' http://127.0.0.1:8000/ostf/tests/1 -o /dev/null) = "200" ]; do
+		  ((tries++))
+		  if [ $tries -gt 240 ];then
+		    failure=1
+		    break
+		  fi
+		  sleep 1
+		done
+                ;;
+  cobbler)	while docker top ${CONTAINER_NAMES['cobbler']} | grep -q puppet; do
+		  ((tries++))
+		  if [ $tries -gt 240 ];then
+		    failure=1
+		    break
+		  fi
+		  sleep 1
+		done
+                ;;
+  *)            echo "No defined test for determining if $1 is ready."
+                ;;
+  esac
+  if [ $failure -eq 1 ] then;
+    echo "ERROR: $1 failed to start."
+  else
+    echo "$1 is ready."
+  fi
+}
+                
+
+
 
 function run_storage_containers {
   #Run storage containers once
